adaptive 1st wave

--- a/app/catalog-tile.pug
+++ b/app/catalog-tile.pug
@@ -36,7 +36,7 @@ html(lang='ru')
 								select.catalog-menu--select.catalog-menu--select_short
 									option все
 									option все
-							.catalog-menu__group
+							.catalog-menu__group.catalog-menu__group_hide
 								.catalog-menu--title Вид:
 								.catalog-menu__view
 									span.catalog-menu__view--item.catalog-menu__view--item_tile.is-active(data='catalog-tile')
