--- a/app/modules/modals.pug
+++ b/app/modules/modals.pug
@@ -1,5 +1,5 @@
 .fade-bg
-.modal.modal_buy(data-target='buy-one-click')
+.modal.modal_buy.is-opened(data-target='buy-one-click')
 	span.modal--close
 	.modal__content
 		span.modal__content--title Купить в 1 клик
@@ -119,3 +119,35 @@
 		.modal_branch__rc
 			span.modal_branch__rc--title Схема проезда
 			.modal_branch--map
+.menu-drop
+	span.menu-drop--close
+	span.menu-drop--logo
+	.menu-drop__row
+		span.menu-drop--elem #[i.menu-drop--icon.menu-drop--icon_pin] #[span Ваш город:] #[a.menu-drop--elem_city(href='javascript:void(0);') Барнаул]
+		.menu-drop__city
+			a.menu-drop__nav--link(href='javascript:void(0)') Москва
+			a.menu-drop__nav--link(href='javascript:void(0)') Барнаул
+			a.menu-drop__nav--link(href='javascript:void(0)') Петропавловск-Камчатский
+		span.menu-drop--elem #[i.menu-drop--icon.menu-drop--icon_user] #[a(href='javascript:void(0);', data-open='user', data-tab-set='2') Вход] | #[a(href='javascript:void(0);', data-open='user', data-tab-set='1') регистрация]
+		.menu-drop__nav
+			a.menu-drop__nav--link(href='javascript:void(0)') Каталог оборудования #[i.menu-drop__nav--arrow]
+			.menu-drop__sub
+				a.menu-drop__nav--link(href='javascript:void(0)') Тепловое
+				a.menu-drop__nav--link(href='javascript:void(0)') Холодильное
+				a.menu-drop__nav--link(href='javascript:void(0)') Технологическое
+				a.menu-drop__nav--link(href='javascript:void(0)') Нейтральное
+				a.menu-drop__nav--link(href='javascript:void(0)') Барное
+				a.menu-drop__nav--link(href='javascript:void(0)') Упаковочное
+				a.menu-drop__nav--link(href='javascript:void(0)') Клининговое
+				a.menu-drop__nav--link(href='javascript:void(0)') Линии раздач
+			a.menu-drop__nav--link(href='javascript:void(0)') Доставка и оплата      
+			a.menu-drop__nav--link(href='javascript:void(0)') Отзывы и портфолио     
+			a.menu-drop__nav--link(href='javascript:void(0)') О нас
+			a.menu-drop__nav--link(href='javascript:void(0)') Филиалы и склады      
+			a.menu-drop__nav--link(href='javascript:void(0)') Новости
+			a.menu-drop__nav--link(href='javascript:void(0)') Сертификаты      
+			a.menu-drop__nav--link(href='javascript:void(0)') Контакты
+		.menu-drop__group
+			a.menu-drop__group--item(href='javascript:void(0)') Сравнение #[sub 29]
+			a.menu-drop__group--item(href='javascript:void(0)') Избранное #[sub 55]
+		a.menu-drop--email(href='mailto:info@texnika-profi.ru') #[span info@texnika-profi.ru]
