adaptive 2nd wave

--- a/app/basket.pug
+++ b/app/basket.pug
@@ -96,21 +96,21 @@ html(lang='ru')
 							.product-set--title Выгодный комплект
 							.product-set__grid
 								.product-set__item
-									a.product-set__item--pic(href='javascript:void(0)')
+									a.product-set__item--pic.scale(href='javascript:void(0)')
 										img.img-contain(src='./pic/set-1.jpg', width='114' height='132', alt='')
 									.product-set__content
 										input(type='checkbox', checked)
 										a.product-set__content--title(href='javascript:void(0)') Котел пищеварочный стационарный КПЭМ-100/9Т
 										span.product-set__content--price 255 131 ₽
 								.product-set__item
-									a.product-set__item--pic(href='javascript:void(0)')
+									a.product-set__item--pic.scale(href='javascript:void(0)')
 										img.img-contain(src='./pic/set-2.jpg', width='131' height='131', alt='')
 									.product-set__content
 										input(type='checkbox', checked)
 										a.product-set__content--title(href='javascript:void(0)') Печь хлебопекарная Восход ХПЭ-750/3 С
 										span.product-set__content--price 57 565 ₽
 								.product-set__item
-									a.product-set__item--pic(href='javascript:void(0)')
+									a.product-set__item--pic.scale(href='javascript:void(0)')
 										img.img-contain(src='./pic/set-3.jpg', width='133' height='111', alt='')
 									.product-set__content
 										input(type='checkbox', checked)
