--- a/app/catalog-list.pug
+++ b/app/catalog-list.pug
@@ -42,7 +42,7 @@ html(lang='ru')
 									span.catalog-menu__view--item.catalog-menu__view--item_tile(data='catalog-tile')
 									span.catalog-menu__view--item.catalog-menu__view--item_list.is-active(data='catalog-list')
 									span.catalog-menu__view--item.catalog-menu__view--item_table(data='catalog-table')
-					.catalog
+					.catalog.catalog_wide
 						.catalog__lc
 							.catalog-grid.catalog-list
 								.catalog__item
