--- a/app/catalog-table.pug
+++ b/app/catalog-table.pug
@@ -42,7 +42,7 @@ html(lang='ru')
 									span.catalog-menu__view--item.catalog-menu__view--item_tile(data='catalog-tile')
 									span.catalog-menu__view--item.catalog-menu__view--item_list(data='catalog-list')
 									span.catalog-menu__view--item.catalog-menu__view--item_table.is-active(data='catalog-table')
-					.catalog
+					.catalog.catalog_wide
 						.catalog__lc
 							.catalog-grid.catalog-table
 								.catalog__item
