--- a/app/catalog-tile.pug
+++ b/app/catalog-tile.pug
@@ -36,13 +36,13 @@ html(lang='ru')
 								select.catalog-menu--select.catalog-menu--select_short
 									option все
 									option все
-							.catalog-menu__group.catalog-menu__group_hide
+							.catalog-menu__group
 								.catalog-menu--title Вид:
 								.catalog-menu__view
 									span.catalog-menu__view--item.catalog-menu__view--item_tile.is-active(data='catalog-tile')
 									span.catalog-menu__view--item.catalog-menu__view--item_list(data='catalog-list')
 									span.catalog-menu__view--item.catalog-menu__view--item_table(data='catalog-table')
-					.catalog
+					.catalog.catalog_wide
 						.catalog__lc
 							.catalog-grid.catalog-tile
 								.catalog__item
