--- a/app/favorite.pug
+++ b/app/favorite.pug
@@ -245,9 +245,9 @@ html(lang='ru')
 									.user--contact +7 (913) 222-33-44
 									.user--contact ivanov@mail.ru
 								.user__nav
-									a.is-active(href='javascript:void(0);') Мой профиль
+									a(href='javascript:void(0);') Мой профиль
 									a(href='javascript:void(0);') Мои заказы
-									a(href='javascript:void(0);') Избранные товары
+									a.is-active(href='javascript:void(0);') Избранные товары
 									a(href='javascript:void(0);') Выйти
 		include modules/footer.pug
 		include modules/modals.pug
