--- a/app/modules/modals.pug
+++ b/app/modules/modals.pug
@@ -1,5 +1,5 @@
 .fade-bg
-.modal.modal_buy.is-opened(data-target='buy-one-click')
+.modal.modal_buy(data-target='buy-one-click')
 	span.modal--close
 	.modal__content
 		span.modal__content--title Купить в 1 клик
