--- a/app/orders-total.pug
+++ b/app/orders-total.pug
@@ -87,7 +87,7 @@ html(lang='ru')
 												a.is-active(href='1', data-fadetabs-item) #[span Новый пользователь]
 												a(href='2', data-fadetabs-item) #[span Уже зарегистрирован (авторизация)]
 											.order-user__tabs(data-fadetabs-slider)
-												.order-user__content
+												.order-user__content(data='1')
 													.form
 														.form__item
 															.form__item--label
@@ -115,7 +115,7 @@ html(lang='ru')
 																label(for='address') #[span Адрес доставки]
 															.form__item--input
 																input(type='text', id='address', value='656000, пр. Ленина, 43')
-												.order-user__content
+												.order-user__content(data='2')
 													.form
 														.form__item
 															.form__item--label
