--- a/app/orders.pug
+++ b/app/orders.pug
@@ -21,12 +21,12 @@ html(lang='ru')
 						.catalog__lc
 							.orders
 								.orders-all
-									.orders-all__row
+									.orders-all__row.orders-all__row_thead
 										span.orders-all--th Номер заказа
 										span.orders-all--th Сумма
 										span.orders-all--th Статус
-										span.orders-all--th Подробнее
-										span.orders-all--th
+										span.orders-all--th(data-notice-disable) Подробнее
+										span.orders-all--th(data-notice-disable)
 									.orders-all__row
 										span.orders-all--td
 											strong № 383838383
