--- a/app/profile.pug
+++ b/app/profile.pug
@@ -26,19 +26,19 @@ html(lang='ru')
 										label.profile--label Фамилия имя отчество *
 										.profile__content
 											input.profile--data(type='text', value='Петренко Иван Сергеевич')
-											.profile--value Петренко Иван Сергеевич
+											span.profile--value Петренко Иван Сергеевич
 											span.profile--edit
 									.profile__item.profile__item_editable
 										label.profile--label Электронная почта *
 										.profile__content
 											input.profile--data(type='text', value='petrenko@mail.ru')
-											.profile--value petrenko@mail.ru
+											span.profile--value petrenko@mail.ru
 											span.profile--edit
 									.profile__item.profile__item_editable
 										label.profile--label Телефон *
 										.profile__content
 											input.profile--data(type='text', value='+ 7 (913) 222-33-44')
-											.profile--value + 7 (913) 222-33-44
+											span.profile--value + 7 (913) 222-33-44
 											span.profile--edit
 									.profile__item.profile__item_editable
 										label.profile--label Пол
@@ -50,25 +50,25 @@ html(lang='ru')
 										label.profile--label Дата рождения
 										.profile__content
 											input.profile--data(type='text', value='01.01.1970')
-											.profile--value 01.01.1970
+											span.profile--value 01.01.1970
 											span.profile--edit
 									.profile__item.profile__item_editable
 										label.profile--label Название организации
 										.profile__content
 											input.profile--data(type='text', value='Лапша и уши')
-											.profile--value Лапша и уши
+											span.profile--value Лапша и уши
 											span.profile--edit
 									.profile__item.profile__item_editable
 										label.profile--label Телефон организации
 										.profile__content
 											input.profile--data(type='text', value='+ 7 (913) 222-33-44')
-											.profile--value + 7 (913) 222-33-44
+											span.profile--value + 7 (913) 222-33-44
 											span.profile--edit
 									.profile__item.profile__item_editable
 										label.profile--label Пароль
 										.profile__content
 											input.profile--data(type='password', value='******')
-											.profile--value ******
+											span.profile--value ******
 											span.profile--edit
 								.profile__group
 									.profile--title Организация
@@ -76,33 +76,33 @@ html(lang='ru')
 										label.profile--label ИНН
 										.profile__content
 											input.profile--data(type='text', value='')
-											.profile--value
+											span.profile--value
 											span.profile--edit
 											span.profile--confirm Ок
 									.profile__item
 										label.profile--label Название организации
 										.profile__content
-											.profile--value ООО «Лапша и уши»
+											span.profile--value ООО «Лапша и уши»
 									.profile__item
 										label.profile--label Полное наименование организации
 										.profile__content
-											.profile--value Общество с ограниченной ответственностью «Лапша и уши»
+											span.profile--value Общество с ограниченной ответственностью «Лапша и уши»
 									.profile__item
 										label.profile--label ОГРН
 										.profile__content
-											.profile--value 345634563453
+											span.profile--value 345634563453
 									.profile__item
 										label.profile--label КПП
 										.profile__content
-											.profile--value 220122020
+											span.profile--value 220122020
 									.profile__item
 										label.profile--label Дата государственной регистрации
 										.profile__content
-											.profile--value 01.02.2003
+											span.profile--value 01.02.2003
 									.profile__item
 										label.profile--label Генеральный директор
 										.profile__content
-											.profile--value Иванов Сергей Михайлович
+											span.profile--value Иванов Сергей Михайлович
 								button.profile--save Сохранить изменения
 						.catalog__rc
 							.user
