--- a/app/all.pug
+++ b/app/all.pug
@@ -22,6 +22,8 @@ html(lang='ru')
 			li
 				a(href='./product-card.html') Карточка товара
 			li
+				a(href='./compare.html') Сравнение
+			li
 				a(href='./basket.html') Корзина
 			li
 				a(href='./favorite.html') Избранное
